[gd_scene load_steps=60 format=2]

[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Jump/Warrior_Jump_3.png" type="Texture" id=1]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_3.png" type="Texture" id=3]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_1.png" type="Texture" id=4]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_7.png" type="Texture" id=5]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_7.png" type="Texture" id=6]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_2.png" type="Texture" id=7]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_10.png" type="Texture" id=8]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_3.png" type="Texture" id=9]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Fall/Warrior_Fall_1.png" type="Texture" id=11]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_3.png" type="Texture" id=13]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_4.png" type="Texture" id=14]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_8.png" type="Texture" id=15]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_2.png" type="Texture" id=18]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_5.png" type="Texture" id=19]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_3.png" type="Texture" id=20]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_6.png" type="Texture" id=21]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_11.png" type="Texture" id=22]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_3.png" type="Texture" id=23]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_4.png" type="Texture" id=24]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_4.png" type="Texture" id=25]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_1.png" type="Texture" id=26]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Fall/Warrior_Fall_3.png" type="Texture" id=28]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_4.png" type="Texture" id=29]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_9.png" type="Texture" id=30]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Fall/Warrior_Fall_2.png" type="Texture" id=32]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_8.png" type="Texture" id=33]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_6.png" type="Texture" id=35]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_1.png" type="Texture" id=36]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_9.png" type="Texture" id=37]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_5.png" type="Texture" id=40]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_6.png" type="Texture" id=41]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_11.png" type="Texture" id=42]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_12.png" type="Texture" id=43]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_5.png" type="Texture" id=44]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_4.png" type="Texture" id=45]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_8.png" type="Texture" id=46]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_10.png" type="Texture" id=47]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Jump/Warrior_Jump_1.png" type="Texture" id=48]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_7.png" type="Texture" id=49]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_9.png" type="Texture" id=50]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Jump/Warrior_Jump_2.png" type="Texture" id=51]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_10.png" type="Texture" id=52]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_2.png" type="Texture" id=53]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/idle/Warrior_Idle_6.png" type="Texture" id=54]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_1.png" type="Texture" id=55]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_8.png" type="Texture" id=56]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_2.png" type="Texture" id=57]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_5.png" type="Texture" id=58]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Run/Warrior_Run_7.png" type="Texture" id=59]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Death-Effect/Warrior_Death_5.png" type="Texture" id=61]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Dash Attack/Warrior_Dash-Attack_6.png" type="Texture" id=62]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_2.png" type="Texture" id=67]
[ext_resource path="res://Warrior-V1.3/Warrior/Individual Sprite/Attack/Warrior_Attack_1.png" type="Texture" id=68]
[ext_resource path="res://pers.gd" type="Script" id=69]
[ext_resource path="res://main_chara.gd" type="Script" id=70]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.467
height = 5.00525

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 53 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 40 ), ExtResource( 54 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 67 ), ExtResource( 3 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 35 ), ExtResource( 6 ), ExtResource( 33 ), ExtResource( 30 ), ExtResource( 8 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 51 ), ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 20 ), ExtResource( 29 ), ExtResource( 61 ), ExtResource( 21 ), ExtResource( 49 ), ExtResource( 56 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 22 ) ],
"loop": true,
"name": "death",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 32 ), ExtResource( 28 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 45 ), ExtResource( 44 ), ExtResource( 62 ), ExtResource( 5 ), ExtResource( 46 ), ExtResource( 37 ), ExtResource( 47 ) ],
"loop": true,
"name": "dash attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 57 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 58 ), ExtResource( 41 ), ExtResource( 59 ), ExtResource( 15 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 14 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 14 )

[node name="main_chara" type="KinematicBody2D"]
position = Vector2( 0, 38 )
script = ExtResource( 70 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 96, 16 )
shape = SubResource( 1 )

[node name="pers" type="AnimatedSprite" parent="."]
position = Vector2( 104, 16 )
scale = Vector2( 1.0235, 1 )
frames = SubResource( 2 )
animation = "attack"
frame = 9
playing = true
script = ExtResource( 69 )

[node name="Camera2D" type="Camera2D" parent="pers"]
current = true

[node name="sword_attack" type="Area2D" parent="." groups=[
"sword",
]]

[node name="sword_right" type="CollisionShape2D" parent="sword_attack"]
position = Vector2( 120, 18 )
shape = SubResource( 3 )

[node name="sword_left" type="CollisionShape2D" parent="sword_attack"]
position = Vector2( 120, 18 )
shape = SubResource( 3 )

[node name="main_hitbox" type="Area2D" parent="."]

[node name="hitbox_right" type="CollisionShape2D" parent="main_hitbox"]
position = Vector2( 95.812, 18 )
shape = SubResource( 4 )

[node name="hitbox_left" type="CollisionShape2D" parent="main_hitbox"]
position = Vector2( 95.812, 18 )
shape = SubResource( 4 )
[connection signal="animation_finished" from="pers" to="." method="_on_pers_animation_finished"]
[connection signal="area_entered" from="sword_attack" to="." method="_on_sword_attack_area_entered"]
[connection signal="area_entered" from="main_hitbox" to="." method="_on_main_hitbox_area_entered"]
